Prevent shrink pinboard items, fix dark mode colors

--- a/app/assets/stylesheets/helpers/pinboard/pinboard_items.scss
+++ b/app/assets/stylesheets/helpers/pinboard/pinboard_items.scss
@@ -114,7 +114,7 @@
   }
   li:hover {
     opacity: 1;
-    background-color: $navigation_background;
+    background-color: var(--bg-color);
     .remove {
       display: inline-block;
     }
